# spread-tracker

./: Cargo.toml  README.md  body.txt  spread_config.yaml
src/: config.rs  errors.rs  lib.rs  main.rs  model.rs
src/caching/: mod.rs
src/db/: mod.rs  supabase.rs
src/utils/: cleaner.rs  duplicates.rs  format.rs  mod.rs  regex_finder.rs  request_builder.rs  save_to_json.rs
