[package]
edition = "2021"
name = "spread_tracker"
version = "0.1.0"
authors = ["Floris floris@xylex.ai"]
description = "Spread tracker for forex pairs"
readme = "README.md"
license = "Apache-2.0"


[dependencies]
regex = "1.10.4"
reqwest = "0.12.2"
serde = "1.0.197"
serde_derive = "1.0.197"
serde_json = "1.0.115"
serde_yaml = "0.9.34"
supabase_rs = "0.2.2"
tokio = "1.36.0"